--- a/public/slack/callback.html
+++ b/public/slack/callback.html
@@ -2,19 +2,26 @@
 <html>
 <head>
   <title>Slack OAuth Callback</title>
+  <script>
+    window.onload = function() {
+      const urlParams = new URLSearchParams(window.location.search);
+      const code = urlParams.get('code');
+      const state = urlParams.get('state');
+
+      if (window.opener) {
+        try {
+          window.opener.postMessage({ code, state }, window.location.origin);
+        } catch (e) {
+          console.error('Failed to send message to opener:', e);
+        }
+        window.close();
+      } else {
+        document.body.innerHTML = 'Authentication complete. You can close this window.';
+      }
+    };
+  </script>
 </head>
 <body>
-  <script>
-    // Extract code and state from URL
-    const urlParams = new URLSearchParams(window.location.search);
-    const code = urlParams.get('code');
-    const state = urlParams.get('state');
-
-    // Send message to parent window
-    if (window.opener) {
-      window.opener.postMessage({ code, state }, window.location.origin);
-      window.close();
-    }
-  </script>
+  <p>Completing authentication...</p>
 </body>
 </html>
